kubernetes/apps/flux-system/weave-gitops/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames: ["weave.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: weave-gitops
          port: 9001
